fix(tips): 使用本地SVG占位图替换外链图片，提升稳定性

--- a/tips.html
+++ b/tips.html
@@ -40,7 +40,7 @@
     <section class="grid">
       <div class="card">
         <div class="card-header"><h3 class="card-title">1. 优先选择“蒸/煮/焯/烤/空气炸” <span class="card-meta">少油更清爽</span></h3></div>
-        <img class="card-image" src="https://picsum.photos/seed/steam-boil/800/600" alt="蒸煮焯烤空气炸" />
+        <img class="card-image" src="assets/images/steam-boil.svg" alt="蒸煮焯烤空气炸" />
         <div class="card-body">
           <ul>
             <li>蒸煮能保留更多水分与营养，油脂更少</li>
@@ -51,7 +51,7 @@
       </div>
       <div class="card">
         <div class="card-header"><h3 class="card-title">2. 用“香草与香料”替代重盐重酱 <span class="card-meta">风味足，热量低</span></h3></div>
-        <img class="card-image" src="https://picsum.photos/seed/herbs-spices/800/600" alt="香草香料" />
+        <img class="card-image" src="assets/images/herbs-spices.svg" alt="香草香料" />
         <div class="card-body">
           <ul>
             <li>黑胡椒、辣椒粉、蒜粉、迷迭香、罗勒等提升风味</li>
@@ -62,7 +62,7 @@
       </div>
       <div class="card">
         <div class="card-header"><h3 class="card-title">3. 调整“主食与蛋白质”比例 <span class="card-meta">更稳饱腹</span></h3></div>
-        <img class="card-image" src="https://picsum.photos/seed/carb-protein/800/600" alt="主食与蛋白质比例" />
+        <img class="card-image" src="assets/images/carb-protein.svg" alt="主食与蛋白质比例" />
         <div class="card-body">
           <ul>
             <li>优先复合碳水：糙米、藜麦、荞麦面、燕麦</li>
@@ -73,7 +73,7 @@
       </div>
       <div class="card">
         <div class="card-header"><h3 class="card-title">4. 轻油技巧 <span class="card-meta">少油也能好吃</span></h3></div>
-        <img class="card-image" src="https://picsum.photos/seed/light-oil/800/600" alt="轻油烹饪" />
+        <img class="card-image" src="assets/images/light-oil.svg" alt="轻油烹饪" />
         <div class="card-body">
           <ul>
             <li>不粘锅 + 喷雾油，替代倒油</li>
@@ -84,7 +84,7 @@
       </div>
       <div class="card">
         <div class="card-header"><h3 class="card-title">5. 备餐与称重 <span class="card-meta">更容易控量</span></h3></div>
-        <img class="card-image" src="https://picsum.photos/seed/meal-prep-scale/800/600" alt="备餐称重" />
+        <img class="card-image" src="assets/images/meal-prep-scale.svg" alt="备餐称重" />
         <div class="card-body">
           <ul>
             <li>提前备餐，减少临时高热量选择</li>
